--- a/index.html
+++ b/index.html
@@ -283,5 +283,81 @@
             <a href="">inizia la tua prova gratuita</a>
         </div>
     </section>
+
+    <!-- Sezione-5 -->
+    <section class="section5">
+        <div>Domande frequenti</div>
+        <div>qual è la differenza tra Dropbox Buisness Standard e Dropbox business Advanced? <span> &or;</span></div> 
+        <div>Quanto spazio riceve il mio team?<span> &or;</span></div>
+        <div>Posso eseguire l'upgrade del mio account Basic o Plus esistente? Come funziona la migrazione?<span> &or;</span></div>
+        <div>Sono previsti sconti per Dropbox Business o Dropbox Enterprise?<span> &or;</span></div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="container-footer clearfix">
+            <div class="container-link clearfix">
+                <!-- Primo blocco partendo da sisnistra -->
+                <div class="dropbox fl">
+                    <ul>
+                        <li>Dropbox</li>
+                        <li><a href="">Applicazione desktop</a></li>
+                        <li><a href="">App mobili</a></li>
+                        <li><a href="">Piani</a></li> 
+                        <li><a href="">Sicurezza</a></li>
+                        <li><a href="">Funzioni</a></li>
+                    </ul>
+                </div>
+                <!-- Secondo blocco partendo da sinistra-->
+                <div class="azienda fl">
+                    <ul>
+                        <li>Azienda</li>
+                        <li><a href="">Informazioni su Dropbox</a></li>
+                        <li><a href="">Lavora con noi</a></li>
+                        <li><a href="">Dicono di noi</a></li> 
+                        <li><a href="">Relazione con gli investitori</a></li>
+                        <li><a href="">Blog</a></li>
+        
+                    </ul>
+                </div>
+                <!-- Terzo blocco partendo da sinistra-->
+                <div class="supporto fl">
+                    <ul>
+                        <li>Supporto</li>
+                        <li><a href="">Centro assistenza</a></li>
+                        <li><a href="">Contattaci</a></li>
+                        <li><a href="">Cookie</a></li> 
+                        <li><a href="">Privacy e Termini</a></li>
+                        <li><a href="">Mappa del sito</a></li>
+                    </ul>
+                </div>
+                <!-- Quarto blocco partendo da sinistra-->
+                <div class="community fl">
+                    <ul>
+                        <li>Community</li>
+                        <li><a href="">Sviluppatori</a></li>
+                        <li><a href="">Refferal</a></li>
+                        <li><a href="">Forum</a></li> 
+                    </ul>
+                </div>
+                <!-- Quinto blocco partendo da sinistra -->
+                <div class="prodotti fl">
+                    <ul>
+                        <li>Prodotti</li>
+                        <li><a href="">Plus</a></li>
+                        <li><a href="">Family</a></li>
+                        <li><a href="">Professional</a></li> 
+                        <li><a href="">Dropbox Businnes</a></li>
+                        <li><a href="">Dropbox Enterprise</a></li> 
+                    </ul>
+                </div>
+            </div>
+            <div></div>
+            <div>Italiano &dtrif;</div>
+        </div>
+
+
+
+    </footer>
 </body>
 </html>
