--- a/index.html
+++ b/index.html
@@ -233,10 +233,12 @@
                 <div class="sub-title-3">Massima tranquillità</div>
                 <div><u>Un'infrastruttura distribuita sicura</u> e <u>strumenti di amministrazione</u> per il controllo e la visibilità mantengono i dati della tua azienda al sicuro in Dropbox.</div>
             </div>
-
-
         </div> 
 
+        <div>
+            <div>Più di 500.000 team utilizzano Dropbox Business</div>
+            <a  class="link-standard" href="">Scopri di più sui nostri clienti</a>
+        </div>
     </section>
 
     <!-- sezione-4 -->
