--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                 </div>
             </div>
             <div></div>
-            <div>Italianoo &dtrif;</div>
+            <div>Italiano &dtrif;</div>
         </div>
 
 
